added transition, could be improved reset doesnt reset count

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@ html, body{
     justify-content: center;
   }
 
-  .rainbowC, .blackC, .selectNum{
+  .rainbowC, .blackC, .transC, .selectNum{
     font-size: 20px;
   }
 
-  .rainbowC:hover, .blackC:hover{
+  .rainbowC:hover, .blackC:hover, .transC:hover{
     transform: scale(1.1);
     cursor: pointer;
   }
@@ -117,7 +117,8 @@ html, body{
   <div id="withCont" class="withCont">
     <div id="side" class="side">      
       <input id = "rainbowC" class="rainbowC" type="button" value="Rainbow">
-      <input id="blackC" class="blackC" type="button" value="Black">
+      <input id="blackC" class="blackC" type="button" value="Grey">
+      <input id="transC" class="transC" type="button" value="Transition">
     </div>
 
 
